[project]
name = "env-ssl-wrapper"
version = "0.0.1"
description = "An RL environment wrapper for learning SSL in the background"
authors = [
    { name = "Phil Wang", email = "lucidrains@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.10"
license = { file = "LICENSE" }
keywords = [
    'artificial intelligence',
    'deep learning',
    'self supervised learning',
    'reinforcement learning'
]

classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.10',
]

dependencies = [
    "einx>=0.3.0",
    "einops>=0.8.1",
    "torch>=2.5",
    "torch-einops-utils>=0.0.29",
]

[project.urls]
Homepage = "https://pypi.org/project/env-ssl-wrapper/"
Repository = "https://codeberg.org/lucidrains/env-ssl-wrapper"

[project.optional-dependencies]
examples = []
test = [
    "pytest"
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = [
    "env_ssl_wrapper",
    "pyproject.toml",
    "README.md",
    "LICENSE"
]

[tool.hatch.build.targets.wheel]
packages = ["env_ssl_wrapper"]
